--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="logo"><a href="#">William Wenstein</a></div>
             <div class="navbar">
-                <a href="landingpage.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="https://wa.me/6285221218686">Contact</a>
                 <a href="#about">About Me</a>
             </div>
@@ -39,19 +39,19 @@
         <div class="judul2">Some random information.</div>
         <div class="container">
             <div class="info">
-                <img src="../latihanlandingpage/img/img1.jpg" alt="barberry">
+                <img src="img/img1.jpg" alt="img1">
                 <div class="text">Gym. My hobby</div>
             </div>
             <div class="info">
-                <img src="../latihanlandingpage/img/img2.jpg" alt="chili">
+                <img src="img/img2.jpg" alt="img2">
                 <div class="text">Joining PMB UNTAR 2023</div>
             </div>
             <div class="info">
-                <img src="../latihanlandingpage/img/img3.jpg" alt="pepper">
+                <img src="img/img3.jpg" alt="img3">
                 <div class="text">Joining PMB FTI UNTAR 2023</div>
             </div>
             <div class="info">
-                <img src="../latihanlandingpage/img/img4.jpg" alt="saffron">
+                <img src="img/img4.jpg" alt="img4">
                 <div class="text">Joining Welcoming Party DPM FTI</div>
             </div>
         </div>
